--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "axios": "^0.19.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "core-js": "^3.6.5",
